<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/table_header"
                android:layout_width="70dp"
                android:layout_height="40dp" />

            <com.blankshrimp.xjtimetablu.widget.SyncedHorizontalScrollView
                android:id="@+id/titleScrollView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/right_title_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Mon"
                        android:layout_width="75dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/Monday" />

                    <TextView
                        android:id="@+id/Tue"
                        android:layout_width="75dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/Tuesday"
                        android:background="@color/gray"/>

                    <TextView
                        android:id="@+id/Wed"
                        android:layout_width="75dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/Wednesday" />

                    <TextView
                        android:id="@+id/Thu"
                        android:layout_width="75dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/Thursday"
                        android:background="@color/gray"/>

                    <TextView
                        android:id="@+id/Fri"
                        android:layout_width="75dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/Friday" />

                    <TextView
                        android:id="@+id/Sat"
                        android:layout_width="75dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/Saturday"
                        android:background="@color/gray"/>

                    <TextView
                        android:id="@+id/Sun"
                        android:layout_width="75dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/Sunday" />

                </LinearLayout>

            </com.blankshrimp.xjtimetablu.widget.SyncedHorizontalScrollView>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/t0900"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="9:00" />

                    <TextView
                        android:id="@+id/t0930"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="9:30"
                        android:background="@color/gray" />

                    <TextView
                        android:id="@+id/t1000"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="10:00" />

                    <TextView
                        android:id="@+id/t1030"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="10:30"
                        android:background="@color/gray"/>

                    <TextView
                        android:id="@+id/t1100"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="11:00" />

                    <TextView
                        android:id="@+id/t1130"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="11:30"
                        android:background="@color/gray"/>

                    <TextView
                        android:id="@+id/t1200"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="12:00" />

                    <TextView
                        android:id="@+id/t1230"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="12:30"
                        android:background="@color/gray" />

                    <TextView
                        android:id="@+id/t1300"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="13:00" />

                    <TextView
                        android:id="@+id/t1330"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="13:30"
                        android:background="@color/gray"/>

                    <TextView
                        android:id="@+id/t1400"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="14:00" />

                    <TextView
                        android:id="@+id/t1430"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="14:30"
                        android:background="@color/gray"/>

                    <TextView
                        android:id="@+id/t1500"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="15:00" />

                    <TextView
                        android:id="@+id/t1530"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="15:30"
                        android:background="@color/gray"/>

                    <TextView
                        android:id="@+id/t1600"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="16:00" />

                    <TextView
                        android:id="@+id/t1630"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="16:30"
                        android:background="@color/gray"/>

                    <TextView
                        android:id="@+id/t1700"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="17:00" />

                    <TextView
                        android:id="@+id/t1730"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="17:30"
                        android:background="@color/gray"/>

                    <TextView
                        android:id="@+id/t1800"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="18:00" />

                    <TextView
                        android:id="@+id/t1830"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="18:30"
                        android:background="@color/gray"/>

                    <TextView
                        android:id="@+id/t1900"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="19:00" />

                    <TextView
                        android:id="@+id/t1930"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="19:30"
                        android:background="@color/gray" />

                </LinearLayout>

                <com.blankshrimp.xjtimetablu.widget.SyncedHorizontalScrollView
                    android:id="@+id/contentScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:id="@+id/classContainer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                    </FrameLayout>

                </com.blankshrimp.xjtimetablu.widget.SyncedHorizontalScrollView>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>